ecmascript/parser/tests/test262-error-references/fail/aae5dc521eff47c4.js.stderr
error: Unexpected token Some(DotDotDot)
 --> $DIR/tests/test262-parser/fail/aae5dc521eff47c4.js:1:19
  |
1 | class a { set foo(...v) {} };
  |                   ^^^

